--- a/CI/azure-pipelines.yml
+++ b/CI/azure-pipelines.yml
@@ -78,7 +78,7 @@ jobs:
       displayName: 'dotnet build'
       inputs:
         projects: '$(uiSolution)'
-        arguments: '-c Release'
+        arguments: '-c $(buildConfiguration)'
     
     - task: DotNetCoreCLI@2
       displayName: 'dotnet pack'
