--- a/xFunc.UnitConverters/xFunc.UnitConverters.csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters.csproj
@@ -12,7 +12,7 @@
     <Copyright>Copyright © 2012-2020 Dmytro Kyshchenko</Copyright>
     <Description>xFunc.UnitConverters is a free conversion library (area, length, mass, power, temperature, time, volume and etc.).</Description>
     <PackageProjectUrl>https://github.com/sys27/xFunc</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/sys27/xFunc/master/xFunc/Images/xFunc.ico</PackageIconUrl>
+    <PackageIcon>xFunc.ico</PackageIcon>
     <PackageTags>Math Converter Unit Units UnitConverter</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
     <AssemblyVersion>4.0.0</AssemblyVersion>
@@ -35,6 +35,7 @@
     <None Include="..\NOTICE" Link="NOTICE">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="..\xFunc\Images\xFunc.ico" Pack="true" PackagePath="" />
   </ItemGroup>
 
   <ItemGroup>
