--- a/xFunc.DotnetTool/xFunc.DotnetTool.csproj
+++ b/xFunc.DotnetTool/xFunc.DotnetTool.csproj
@@ -13,7 +13,7 @@
     <Company />
     <Copyright>Copyright ©2012-2020 Dmytro Kyshchenko</Copyright>
     <PackageProjectUrl>https://github.com/sys27/xFunc</PackageProjectUrl>
-    <PackageIcon>xFunc.ico</PackageIcon>
+    <PackageIcon>xFunc.png</PackageIcon>
     <PackageTags>Math Expression Expressions Parser MathParser Differentiation Simplification</PackageTags>
     <AssemblyVersion>4.0.0</AssemblyVersion>
     <FileVersion>4.0.0</FileVersion>
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\xFunc\Images\xFunc.ico" Pack="true" PackagePath="" />
+    <None Include="..\xFunc.png" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
