--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -12,7 +12,7 @@
     <Copyright>Copyright © 2012-2020 Dmytro Kyshchenko</Copyright>
     <Description>xFunc.Maths is a simple and easy to use library that allows you to build mathematical expressions.</Description>
     <PackageProjectUrl>https://github.com/sys27/xFunc</PackageProjectUrl>
-    <PackageIcon>xFunc.ico</PackageIcon>
+    <PackageIcon>xFunc.png</PackageIcon>
     <PackageTags>Math Expression Expressions Parser MathParser Differentiation Simplification</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
     <AssemblyVersion>4.0.0</AssemblyVersion>
@@ -41,7 +41,7 @@
     <None Include="..\NOTICE" Link="NOTICE">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\xFunc\Images\xFunc.ico" Pack="true" PackagePath="" />
+    <None Include="..\xFunc.png" Pack="true" PackagePath="" />
   </ItemGroup>
 
   <ItemGroup>
