--- a/CI/azure-pipelines.yml
+++ b/CI/azure-pipelines.yml
@@ -24,6 +24,11 @@ jobs:
       buildConfiguration: 'Release'
 
     steps:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '3.1.302'
+
     - script: echo '##vso[task.setvariable variable=nupkgVersion]$(defaultPackageVersion)
       condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
 
