--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -19,6 +19,9 @@
     <FileVersion>4.0.0</FileVersion>
     <RepositoryUrl>https://github.com/sys27/xFunc</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
+    <PackageReleaseNotes>https://github.com/sys27/xFunc/wiki/ChangeLog
+    
+    https://github.com/sys27/xFunc/wiki/Breaking-Changes</PackageReleaseNotes>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
