--- a/CI/azure-pipelines.yml
+++ b/CI/azure-pipelines.yml
@@ -35,6 +35,7 @@ jobs:
     - script: echo '##vso[task.setvariable variable=nupkgVersion]$(defaultPackageVersion)-preview$(Build.BuildNumber)
       condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
 
+    - script: dotnet tool install --global dotnet-reportgenerator-globaltool
     - script: dotnet tool install --global Codecov.Tool
 
     - task: DotNetCoreCLI@2
@@ -54,12 +55,12 @@ jobs:
       inputs:
         command: test
         projects: '$(solution)'
-        arguments: '-c $(buildConfiguration) -p:CollectCoverage=true -p:CoverletOutputFormat=cobertura -p:CoverletOutput="$(Build.SourcesDirectory)/coverage/" -p:ExcludeByAttribute="ExcludeFromCodeCoverage" -p:Include="[xFunc.*]*" -p:Exclude="[xFunc.Tests*]*%2c[xFunc.*]*.Resource%2c[xFunc.*]*Exception" -p:Threshold=90 -p:ThresholdStat=total'
+        arguments: '--nologo --no-build -c $(buildConfiguration) -p:CollectCoverage=true -p:CoverletOutputFormat=cobertura -p:CoverletOutput="$(Build.SourcesDirectory)/coverage/" -p:ExcludeByAttribute="ExcludeFromCodeCoverage" -p:Include="[xFunc.*]*" -p:Exclude="[xFunc.Tests*]*%2c[xFunc.*]*.Resource%2c[xFunc.*]*Exception" -p:Threshold=90 -p:ThresholdStat=total'
         publishTestResults: true
 
     - task: CmdLine@2
       inputs:
-        script: 'dotnet reportgenerator -reports:"$(Build.SourcesDirectory)/coverage/coverage.cobertura.xml" -targetdir:"$(Build.SourcesDirectory)/coverage/" -reporttypes:HtmlInline_AzurePipelines'
+        script: 'reportgenerator -reports:"$(Build.SourcesDirectory)/coverage/coverage.cobertura.xml" -targetdir:"$(Build.SourcesDirectory)/coverage/" -reporttypes:HtmlInline_AzurePipelines'
         workingDirectory: 'xFunc.Tests'
         failOnStderr: true
 
