--- a/xFunc.Maths/xFunc.Maths.Core.csproj
+++ b/xFunc.Maths/xFunc.Maths.Core.csproj
@@ -4,19 +4,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>xFunc.Maths</RootNamespace>
     <PackageId>xFunc.Maths</PackageId>
-    <Version>3.7.1</Version>
+    <Version>3.7.2</Version>
     <Product>xFunc.Maths</Product>
-    <Authors>Dmitry Kischenko</Authors>
+    <Authors>Dmytro Kyshchenko</Authors>
     <Company />
-    <Copyright>Copyright ©2012-2019 Dmitry Kischenko</Copyright>
+    <Copyright>Copyright ©2012-2020 Dmytro Kyshchenko</Copyright>
     <Description>xFunc.Maths is a simple and easy to use library that allows you to build mathematical expressions.</Description>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/sys27/xFunc</PackageProjectUrl>
     <PackageIconUrl>http://download-codeplex.sec.s-msft.com/Download?ProjectName=xfunc&amp;amp;DownloadId=639207&amp;amp;Build=20266</PackageIconUrl>
     <PackageTags>Math Expression Expressions Parser MathParser Differentiation Simplification</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
-    <AssemblyVersion>3.6.0</AssemblyVersion>
-    <FileVersion>3.6.0</FileVersion>
+    <AssemblyVersion>3.7.2</AssemblyVersion>
+    <FileVersion>3.7.2</FileVersion>
     <RepositoryUrl>https://github.com/sys27/xFunc</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
