--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,13 @@
 version: 2
 updates:
   - package-ecosystem: "nuget"
+    directory: "./xFunc.Benchmark/"
+    schedule:
+      interval: "daily"
+    target-branch: "dev"
+    assignees:
+      - "sys27"
+  - package-ecosystem: "nuget"
     directory: "./xFunc.Tests/"
     schedule:
       interval: "daily"
