--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -57,9 +57,11 @@
                 "-p:CollectCoverage=true",
                 "-p:CoverletOutputFormat=cobertura",
                 "-p:CoverletOutput=\"../coverage/\"",
-                "-p:ExcludeByAttribute=\"ExcludeFromCodeCoverage,GeneratedCode\"",
+                "-p:ExcludeByAttribute=ExcludeFromCodeCoverage",
+                "-p:ExcludeByAttribute=GeneratedCode",
                 "-p:Include=\"[xFunc.*]*\"",
-                "-p:Exclude=\"[xFunc.Tests*]*%2c[xFunc.*]*.Resource%2c[xFunc.*]*Exception\"",
+                "-p:Exclude=\"[xFunc.Tests*]\"",
+                "-p:Exclude=\"[xFunc.*]*Exception\"",
                 "-p:Threshold=90",
                 "-p:ThresholdStat=total"
             ],
