--- a/xFunc.DotnetTool/xFunc.DotnetTool.csproj
+++ b/xFunc.DotnetTool/xFunc.DotnetTool.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>xFunc</ToolCommandName>    
     <PackageId>xFunc.DotnetTool</PackageId>
