--- a/xFunc.UnitConverters/xFunc.UnitConverters.csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters.csproj
@@ -31,6 +31,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
